--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,3 +3,7 @@ Flask-Login==0.6.3
 Werkzeug==3.0.1
 pyopenssl==23.2.0
 APScheduler==3.10.1
+flask-restful==0.3.10
+flask-apispec==0.11.4
+marshmallow==3.19.0
+flask-limiter==3.3.1
